fix uploads table state after all file deletion, fix dahsboard tile align items

--- a/src/app/components/dashboard/tiles/antragsarten-tile/antragsarten-tile.component.scss
+++ b/src/app/components/dashboard/tiles/antragsarten-tile/antragsarten-tile.component.scss
@@ -4,7 +4,7 @@
 
 .content {
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   display: flex;
   flex: 1;
 }
