--- a/src/app/routes/dashboard/dashboard-antragsliste/dashboard-antragsliste.component.scss
+++ b/src/app/routes/dashboard/dashboard-antragsliste/dashboard-antragsliste.component.scss
@@ -36,6 +36,7 @@ section {
   table {
     margin-top: 0;
     font-size: clamp(12px, 2vw, 14px);
+    width: 100%;
   }
 
   .uploadID {
